data/raw_logs/lexical/lex_26.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_26.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_26.c:1:22: error: invalid suffix '_456' on integer constant
    1 | int main() { int x = 123_456; }
      |                      ^~~~~~~
